--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<!-- Banner -->
 						<section id="banner">
 							<div class="inner">
-								<h1>Hey, I'm Snapshot</h1>
+								<h1>Yo, I'm Snapshot</h1>
 								<p>A fully responsive gallery template by <a href="https://templated.co">TEMPLATED</a></p>
 								<ul class="actions">
 									<li><a href="#galleries" class="button alt scrolly big">Continue</a></li>
